[Fix] Images No Longer Break Their Container

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -29,6 +29,8 @@ h1, h2, h3, h4, h5, h6, .navbar {
 
 img {
   border-radius: 0.2rem;
+  max-width: 100%;
+  height: auto;
 }
 
 .img-left {
